[tool.poetry]
name = "renderer-definition"
version = "0.1.0"
description = ""
authors = ["Zandari <kirillgluhih1@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
celery = {extras = ["redis"], version = "^5.5.1"}
pydantic = "^2.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
